[gd_scene load_steps=4 format=3 uid="uid://bsaq37cddb4qb"]

[ext_resource type="Script" path="res://scripts/puzzles/camera_pov/camera_2d_pov.gd" id="1_8h4h5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jv77y"]
radius = 365.859

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkmid"]
size = Vector2(1339, 716.5)

[node name="Camera2D" type="Camera2D"]
limit_smoothed = true
script = ExtResource("1_8h4h5")

[node name="limit_right" type="Marker2D" parent="."]
position = Vector2(1592, 0)

[node name="limit_left" type="Marker2D" parent="."]
position = Vector2(-1479, 3)

[node name="limit_top" type="Marker2D" parent="."]
position = Vector2(-125, -846)

[node name="limit_bottom" type="Marker2D" parent="."]
position = Vector2(-119, 834)

[node name="light_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="light_area"]
shape = SubResource("CircleShape2D_jv77y")

[node name="captured_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="captured_area"]
position = Vector2(-2, -0.75)
shape = SubResource("RectangleShape2D_gkmid")

[node name="captured_timer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -968.0
offset_top = -546.0
offset_right = -928.0
offset_bottom = -506.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 296.0
offset_bottom = 1104.0
color = Color(0, 0, 0, 0.207843)

[node name="ColorRect" type="ColorRect" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 1634.0
offset_top = 1.0
offset_right = 1930.0
offset_bottom = 1105.0
color = Color(0, 0, 0, 0.207843)

[node name="ColorRect2" type="ColorRect" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 296.0
offset_top = 903.0
offset_right = 1634.0
offset_bottom = 1171.0
color = Color(0, 0, 0, 0.207843)

[node name="ColorRect3" type="ColorRect" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 296.0
offset_top = -81.0
offset_right = 1634.0
offset_bottom = 187.0
color = Color(0, 0, 0, 0.207843)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1446.0
offset_top = 935.0
offset_right = 1486.0
offset_bottom = 958.0
text = "PHOTO_CAPTURED"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1446.0
offset_top = 979.0
offset_right = 1592.0
offset_bottom = 1002.0
text = "PHOTO_FLASH"

[connection signal="area_entered" from="light_area" to="." method="_on_light_area_area_entered"]
[connection signal="area_entered" from="captured_area" to="." method="_on_captured_area_area_entered"]
[connection signal="timeout" from="captured_timer" to="." method="_on_captured_timer_timeout"]
